--- a/about.html
+++ b/about.html
@@ -58,14 +58,18 @@
                             <li> <a href="Javascript:void(0)"><i class="fa fa-facebook-f"></i></a></li>
                             <li> <a href="Javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
                             <li> <a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            </li>
+                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
                         <ul class="email text_align_right">
-                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></a> </li>
+                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user"
+                                        aria-hidden="true"></i></a></li>
+                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search"
+                                        style="cursor: pointer;" aria-hidden="true"></i></a> </li>
                             <li>
                                 <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
                             </li>
@@ -88,7 +92,10 @@
                                     <h2>About Us</h2>
                                 </div>
                                 <div class="about_text">
-                                    <p>It is a long established fact that a reader will be distracted bIt is a long established fact that a reader will be distracted by y It is a long established fact that a reader will be distracted by It is a long established fact that a reader will be distracted by </p>
+                                    <p>At [Your Company Name], we're a team of passionate innovators driven by the
+                                        transformative potential of cryptocurrency.
+                                        We believe in building a future where digital assets empower individuals and
+                                        reshape the global financial landscape.</p>
                                     <a class="read_more" href="about.html">Read More</a>
                                 </div>
                             </div>
@@ -113,99 +120,70 @@
                         <a class="logo_bottom" href="index.html">BitCYPO</a>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                  <div class="Informa conta ">
-                     <h3>Contact Us</h3>
-                     <ul>
-                        <li> <a href="Javascript:void(0) "> <i class="fa fa-map-marker " aria-hidden="true "></i> Location
-                           </a>
-                        </li>
-                        <li> <a href="Javascript:void(0) "><i class="fa fa-phone " aria-hidden="true "></i> Call +01 1234567890
-                           </a>
-                        </li>
-                        <li> <a href="Javascript:void(0) "> <i class="fa fa-envelope " aria-hidden="true "></i> demo@gmail.com
-                           </a>
-                        </li>
-                     </ul>
-                     <ul>
-                        <li>Readable content of                              
-                        </li>
-                        <li>a page when looking                           
-                        </li>
-                        <li>at its layoutreadable                          
-                        </li>
-                        <li>content of a page                             
-                        </li>
-                        <li>when looking at its                         
-                        </li>
-                        <li>layout                          
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-md-3 col-sm-6 "">
+                      <div class=" Informa conta ">
+                         <h3>Contact Us</h3>
+                         <ul>
+                            <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> Location
+                               </a>
+                            </li>
+                            <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
+                               </a>
+                            </li>
+                            <li> <a href=" Javascript:void(0) "> <i class=" fa fa-envelope " aria-hidden=" true "></i> demo@gmail.com
+                               </a>
+                            </li>
+                         </ul>
+                         <di>
+                            <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
+                         </di>
+                      </div>
+                   </div>
+                   <div class=" col-md-3 col-sm-6 "">
                         <div class="Informa helpful">
                             <h3>Useful Link</h3>
-                            <ul>
-                                <li>Readable content of
-                                </li>
-                                <li>a page when looking
-                                </li>
-                                <li>at its layoutreadable
-                                </li>
-                                <li>content of a page
-                                </li>
-                                <li>when looking at its
-                                </li>
-                                <li>layout
-                                </li>
-                            </ul>
+                            <div>
+                                <p>We prioritize industry-leading security measures and transparent practices to foster
+                                    trust and confidence in the crypto
+                                    ecosystem.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                  <div class="Informa ">
-                     <h3>Offices</h3>
-                     <ul>
-                        <li>Readable content of                              
-                        </li>
-                        <li>a page when looking                           
-                        </li>
-                        <li>at its layoutreadable                          
-                        </li>
-                        <li>content of a page                             
-                        </li>
-                        <li>when looking at its                         
-                        </li>
-                        <li>layout                          
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-md-3 col-sm-6 ">
-                  <div class="Informa ">
-                     <h3>Newsletter</h3>
-                     <form class="newslatter_form ">
-                        <input class="ente " placeholder="Enter your email " type="text " name="Enter your email ">
-                        <button class="subs_btn ">Subscribe</button>
-                     </form>
-                  </div>
-               </div>
-            </div>
-            <div class="copyright text_align_center ">
-               <div class="container ">
-                  <div class="row ">
-                     <div class="col-md-12 ">
-                        <p>© 2020 All Rights Reserved. Design by   <a href="https://html.design/ "> Free Html Template</a></p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </footer>
+                      <div class=" Informa ">
+                         <h3>Offices</h3>
+                         <div>
+                            <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
+                         </div>
+                      </div>
+                   </div>
+                   <div class=" col-md-3 col-sm-6 ">
+                      <div class=" Informa ">
+                         <h3>Newsletter</h3>
+                         <form class=" newslatter_form ">
+                            <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your
+                        email ">
+                            <button class=" subs_btn ">Subscribe</button>
+                         </form>
+                      </div>
+                   </div>
+                </div>
+                <div class=" copyright text_align_center ">
+                   <div class=" container ">
+                      <div class=" row ">
+                         <div class=" col-md-12 ">
+                            <p>© 2020 All Rights Reserved. Design by   <a href=" https://html.design/ "> Free Html Template</a></p>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+             </div>
+          </div>
+          </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js "></script>
-      <script src="js/bootstrap.bundle.min.js "></script>
-      <script src="js/jquery-3.0.0.min.js "></script>
-      <script src="js/custom.js "></script>
+      <script src=" js/jquery.min.js "></script>
+      <script src=" js/bootstrap.bundle.min.js "></script>
+      <script src=" js/jquery-3.0.0.min.js "></script>
+      <script src=" js/custom.js "></script>
    </body>
 </html>
