--- a/searvices.html
+++ b/searvices.html
@@ -58,14 +58,18 @@
                             <li> <a href="Javascript:void(0)"><i class="fa fa-facebook-f"></i></a></li>
                             <li> <a href="Javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
                             <li> <a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            </li>
+                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
                         <ul class="email text_align_right">
-                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></a> </li>
+                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user"
+                                        aria-hidden="true"></i></a></li>
+                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search"
+                                        style="cursor: pointer;" aria-hidden="true"></i></a> </li>
                             <li>
                                 <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
                             </li>
@@ -81,39 +85,36 @@
     <div class="wallet">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage text_align_center">
-                        <h2>Our Searvice</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div id="wa_hover" class="wallet_box text_align_center">
-                        <i><img src="images/wa1.svg" alt="#"/></i>
-                        <h3>ONLINE WALLET</h3>
-                        <p>It is a long established fact that a reader will be distracted by </p>
+                        <i><img src="images/wa1.svg" alt="#" /></i>
+                        <h3>Bitcoin Mining</h3>
+                        <p>Our managed mining plans eliminate the complexity of setting up and maintaining your own
+                            mining rig.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div id="wa_hover" class="wallet_box text_align_center">
-                        <i><img src="images/wa2.svg" alt="#"/></i>
-                        <h3>SEND COINS</h3>
-                        <p>It is a long established fact that a reader will be distracted by </p>
+                        <i><img src="images/wa2.svg" alt="#" /></i>
+                        <h3>Bitcoin Holding</h3>
+                        <p>Choose from a variety of investment plans tailored to your risk tolerance and financial
+                            goals.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div id="wa_hover" class="wallet_box text_align_center">
-                        <i><img src="images/wa3.svg" alt="#"/></i>
-                        <h3>MOBILE APP </h3>
-                        <p>It is a long established fact that a reader will be distracted by </p>
+                        <i><img src="images/wa3.svg" alt="#" /></i>
+                        <h3>Crypto Investment</h3>
+                        <p>We safeguard your Bitcoin holdings with industry-leading security protocols and
+                            multi-signature wallets.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div id="wa_hover" class="wallet_box text_align_center">
-                        <i><img src="images/wa4.svg" alt="#"/></i>
-                        <h3>COIN MINING</h3>
-                        <p>It is a long established fact that a reader will be distracted by </p>
+                        <i><img src="images/wa4.svg" alt="#" /></i>
+                        <h3>DeFi Staking</h3>
+                        <p>Stake your crypto holdings and generate rewards through decentralized finance (DeFi)
+                            protocols</p>
                     </div>
                 </div>
             </div>
@@ -129,16 +130,16 @@
                         <a class="logo_bottom" href="index.html">BitCYPO</a>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                  <div class="Informa conta ">
+                  <div class=" Informa conta ">
                      <h3>Contact Us</h3>
                      <ul>
-                        <li> <a href="Javascript:void(0) "> <i class="fa fa-map-marker " aria-hidden="true "></i> Location
+                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> Location
                            </a>
                         </li>
-                        <li> <a href="Javascript:void(0) "><i class="fa fa-phone " aria-hidden="true "></i> Call +01 1234567890
+                        <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
                            </a>
                         </li>
-                        <li> <a href="Javascript:void(0) "> <i class="fa fa-envelope " aria-hidden="true "></i> demo@gmail.com
+                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-envelope " aria-hidden=" true "></i> demo@gmail.com
                            </a>
                         </li>
                      </ul>
@@ -158,7 +159,7 @@
                      </ul>
                   </div>
                </div>
-               <div class="col-md-3 col-sm-6 "">
+               <div class=" col-md-3 col-sm-6 "">
                         <div class="Informa helpful">
                             <h3>Useful Link</h3>
                             <ul>
@@ -178,7 +179,7 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                  <div class="Informa ">
+                  <div class=" Informa ">
                      <h3>Offices</h3>
                      <ul>
                         <li>Readable content of                              
@@ -196,21 +197,21 @@
                      </ul>
                   </div>
                </div>
-               <div class="col-md-3 col-sm-6 ">
-                  <div class="Informa ">
+               <div class=" col-md-3 col-sm-6 ">
+                  <div class=" Informa ">
                      <h3>Newsletter</h3>
-                     <form class="newslatter_form ">
-                        <input class="ente " placeholder="Enter your email " type="text " name="Enter your email ">
-                        <button class="subs_btn ">Subscribe</button>
+                     <form class=" newslatter_form ">
+                        <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your email ">
+                        <button class=" subs_btn ">Subscribe</button>
                      </form>
                   </div>
                </div>
             </div>
-            <div class="copyright text_align_center ">
-               <div class="container ">
-                  <div class="row ">
-                     <div class="col-md-12 ">
-                        <p>© 2020 All Rights Reserved. Design by   <a href="https://html.design/ "> Free Html Template</a></p>
+            <div class=" copyright text_align_center ">
+               <div class=" container ">
+                  <div class=" row ">
+                     <div class=" col-md-12 ">
+                        <p>© 2020 All Rights Reserved. Design by   <a href=" https://html.design/ "> Free Html Template</a></p>
                      </div>
                   </div>
                </div>
@@ -219,9 +220,9 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js "></script>
-      <script src="js/bootstrap.bundle.min.js "></script>
-      <script src="js/jquery-3.0.0.min.js "></script>
-      <script src="js/custom.js "></script>
+      <script src=" js/jquery.min.js "></script>
+      <script src=" js/bootstrap.bundle.min.js "></script>
+      <script src=" js/jquery-3.0.0.min.js "></script>
+      <script src=" js/custom.js "></script>
    </body>
 </html>
