--- a/testimonial.html
+++ b/testimonial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- basic -->
     <meta charset="utf-8">
@@ -57,14 +58,18 @@
                             <li> <a href="Javascript:void(0)"><i class="fa fa-facebook-f"></i></a></li>
                             <li> <a href="Javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
                             <li> <a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            </li>
+                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
                         <ul class="email text_align_right">
-                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></a> </li>
+                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user"
+                                        aria-hidden="true"></i></a></li>
+                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search"
+                                        style="cursor: pointer;" aria-hidden="true"></i></a> </li>
                             <li>
                                 <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
                             </li>
@@ -103,7 +108,7 @@
                                                     <div class="row">
                                                         <div class="col-md-3">
                                                             <div class="testomoniam_text text_align_center">
-                                                                <i><img src="images/clint.jpg" alt="#"/></i>
+                                                                <i><img src="images/clint.jpg" alt="#" /></i>
                                                                 <h3>MorGan Den</h3>
                                                                 <span>Bitcoin</span>
                                                                 <img src="images/icon.png" alt="#" />
@@ -111,7 +116,12 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webmore-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webmore-or-less normal distribution of</p>
+                                                                <p>At [Your Company Name], we're a team of passionate
+                                                                    innovators driven by the transformative potential of
+                                                                    cryptocurrency.
+                                                                    We believe in building a future where digital assets
+                                                                    empower individuals and reshape the global financial
+                                                                    landscape.</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -124,7 +134,7 @@
                                                     <div class="row">
                                                         <div class="col-md-3">
                                                             <div class="testomoniam_text text_align_center">
-                                                                <i><img src="images/clint.jpg" alt="#"/></i>
+                                                                <i><img src="images/clint.jpg" alt="#" /></i>
                                                                 <h3>MorGan Den</h3>
                                                                 <span>Bitcoin</span>
                                                                 <img src="images/icon.png" alt="#" />
@@ -132,7 +142,12 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webmore-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webmore-or-less normal distribution of</p>
+                                                                <p>Security is paramount for my Bitcoin holdings. Cypher
+                                                                    provides the peace of mind I need with their
+                                                                    industry-leading
+                                                                    security measures. Their flexible investment options
+                                                                    also let me tailor my strategy to my long-term
+                                                                    financial goals.</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -145,7 +160,7 @@
                                                     <div class="row">
                                                         <div class="col-md-3">
                                                             <div class="testomoniam_text text_align_center">
-                                                                <i><img src="images/clint.jpg" alt="#"/></i>
+                                                                <i><img src="images/clint.jpg" alt="#" /></i>
                                                                 <h3>MorGan Den</h3>
                                                                 <span>Bitcoin</span>
                                                                 <img src="images/icon.png" alt="#" />
@@ -153,7 +168,13 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webmore-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webmore-or-less normal distribution of</p>
+                                                                <p>efore Cypher, mining felt overwhelming. Now, their
+                                                                    managed plans let me participate in Bitcoin's future
+                                                                    without the
+                                                                    technical headaches. Plus, their expert support
+                                                                    ensures my operation runs smoothly, allowing me to
+                                                                    focus on other
+                                                                    ventures.</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -187,99 +208,70 @@
                         <a class="logo_bottom" href="index.html">BitCYPO</a>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                  <div class="Informa conta ">
-                     <h3>Contact Us</h3>
-                     <ul>
-                        <li> <a href="Javascript:void(0) "> <i class="fa fa-map-marker " aria-hidden="true "></i> Location
-                           </a>
-                        </li>
-                        <li> <a href="Javascript:void(0) "><i class="fa fa-phone " aria-hidden="true "></i> Call +01 1234567890
-                           </a>
-                        </li>
-                        <li> <a href="Javascript:void(0) "> <i class="fa fa-envelope " aria-hidden="true "></i> demo@gmail.com
-                           </a>
-                        </li>
-                     </ul>
-                     <ul>
-                        <li>Readable content of                              
-                        </li>
-                        <li>a page when looking                           
-                        </li>
-                        <li>at its layoutreadable                          
-                        </li>
-                        <li>content of a page                             
-                        </li>
-                        <li>when looking at its                         
-                        </li>
-                        <li>layout                          
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-md-3 col-sm-6 "">
+                          <div class=" Informa conta ">
+                             <h3>Contact Us</h3>
+                             <ul>
+                                <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> Location
+                                   </a>
+                                </li>
+                                <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
+                                   </a>
+                                </li>
+                                <li> <a href=" Javascript:void(0) "> <i class=" fa fa-envelope " aria-hidden=" true "></i> demo@gmail.com
+                                   </a>
+                                </li>
+                             </ul>
+                             <di>
+                                <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
+                             </di>
+                          </div>
+                       </div>
+                       <div class=" col-md-3 col-sm-6 "">
                         <div class="Informa helpful">
                             <h3>Useful Link</h3>
-                            <ul>
-                                <li>Readable content of
-                                </li>
-                                <li>a page when looking
-                                </li>
-                                <li>at its layoutreadable
-                                </li>
-                                <li>content of a page
-                                </li>
-                                <li>when looking at its
-                                </li>
-                                <li>layout
-                                </li>
-                            </ul>
+                            <div>
+                                <p>We prioritize industry-leading security measures and transparent practices to foster
+                                    trust and confidence in the crypto
+                                    ecosystem.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                  <div class="Informa ">
-                     <h3>Offices</h3>
-                     <ul>
-                        <li>Readable content of                              
-                        </li>
-                        <li>a page when looking                           
-                        </li>
-                        <li>at its layoutreadable                          
-                        </li>
-                        <li>content of a page                             
-                        </li>
-                        <li>when looking at its                         
-                        </li>
-                        <li>layout                          
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-md-3 col-sm-6 ">
-                  <div class="Informa ">
-                     <h3>Newsletter</h3>
-                     <form class="newslatter_form ">
-                        <input class="ente " placeholder="Enter your email " type="text " name="Enter your email ">
-                        <button class="subs_btn ">Subscribe</button>
-                     </form>
-                  </div>
-               </div>
-            </div>
-            <div class="copyright text_align_center ">
-               <div class="container ">
-                  <div class="row ">
-                     <div class="col-md-12 ">
-                        <p>© 2020 All Rights Reserved. Design by   <a href="https://html.design/ "> Free Html Template</a></p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </footer>
+                          <div class=" Informa ">
+                             <h3>Offices</h3>
+                             <div>
+                                <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class=" col-md-3 col-sm-6 ">
+                          <div class=" Informa ">
+                             <h3>Newsletter</h3>
+                             <form class=" newslatter_form ">
+                                <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your
+                        email ">
+                                <button class=" subs_btn ">Subscribe</button>
+                             </form>
+                          </div>
+                       </div>
+                    </div>
+                    <div class=" copyright text_align_center ">
+                       <div class=" container ">
+                          <div class=" row ">
+                             <div class=" col-md-12 ">
+                                <p>© 2020 All Rights Reserved. Design by   <a href=" https://html.design/ "> Free Html Template</a></p>
+                             </div>
+                          </div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+              </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js "></script>
-      <script src="js/bootstrap.bundle.min.js "></script>
-      <script src="js/jquery-3.0.0.min.js "></script>
-      <script src="js/custom.js "></script>
+      <script src=" js/jquery.min.js "></script>
+      <script src=" js/bootstrap.bundle.min.js "></script>
+      <script src=" js/jquery-3.0.0.min.js "></script>
+      <script src=" js/custom.js "></script>
    </body>
 </html>
