--- a/works.html
+++ b/works.html
@@ -42,35 +42,31 @@
       </div>
       <!-- header -->
       <header>
-         <!-- header inner -->
-         <div class="head-top">
+        <!-- header inner -->
+        <div class="head-top">
             <div class="container-fluid">
-               <div class="row d_flex">
-                  <div class="col-sm-3">
-                     <div class="logo">
-                        <a href="index.html">BitCYPO</a>
-                     </div>
-                  </div>
-                  <div class="col-sm-5">
-                     <ul class="social_icon text_align_right d_none">
-                        <li> <a href="Javascript:void(0)"><i class="fa fa-facebook-f"></i></a></li>
-                        <li> <a href="Javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
-                        <li> <a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                     </ul>
-                  </div>
-                  <div class="col-sm-4">
-                     <ul class="email text_align_right">
-                        <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                        <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></a> </li>
-                        <li> <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button></li>
-                     </ul>
-                  </div>
-               </div>
+                <div class="row d_flex">
+                    <div class="col-sm-3">
+                        <div class="logo">
+                            <a href="index.html">Blockcypher</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-5">
+                        
+                    </div>
+                    <div class="col-sm-4">
+                        <ul class="email text_align_right">
+                            <li class="d_none"></li>
+                            <li class="d_none"></li>
+                            <li>
+                                <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-         </div>
-      </header>
+        </div>
+    </header>
       <!-- end header -->
       <!-- works -->
       <div class="works">
@@ -182,7 +178,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-12">
-                           <p>© 2020 All Rights Reserved. Design by   <a href="https://html.design/"> Free Html Template</a></p>
+                           <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
                         </div>
                      </div>
                   </div>
