--- a/about.html
+++ b/about.html
@@ -33,16 +33,15 @@
         <div class="loader"><img src="images/loading.gif" alt="" /></div>
     </div>
     <!-- end loader -->
-    <div id="mySidepanel" class="sidepanel">
+     <div id="mySidepanel" class="sidepanel">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="index.html">Home</a>
-        <a class="active" href="about.html">About</a>
-        <a href="searvices.html">Searvices</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="searvices.html">Services</a>
         <a href="testimonial.html">Testimonial</a>
         <a href="works.html">Works</a>
         <a href="contact.html">Contact</a>
     </div>
-    <!-- header -->
     <header>
         <!-- header inner -->
         <div class="head-top">
@@ -50,26 +49,16 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">BitCYPO</a>
+                            <a href="index.html">Blockcypher</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
-                        <ul class="social_icon text_align_right d_none">
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-facebook-f"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                            </li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                            </li>
-                        </ul>
+                        
                     </div>
                     <div class="col-sm-4">
                         <ul class="email text_align_right">
-                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user"
-                                        aria-hidden="true"></i></a></li>
-                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search"
-                                        style="cursor: pointer;" aria-hidden="true"></i></a> </li>
+                            <li class="d_none"></li>
+                            <li class="d_none"></li>
                             <li>
                                 <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
                             </li>
@@ -79,7 +68,6 @@
             </div>
         </div>
     </header>
-    <!-- end header -->
     <!-- about -->
     <div id="about" class="about">
         <div class="container">
@@ -117,30 +105,30 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="index.html">BitCYPO</a>
+                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                      <div class=" Informa conta ">
-                         <h3>Contact Us</h3>
-                         <ul>
-                            <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> Location
-                               </a>
-                            </li>
-                            <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
-                               </a>
-                            </li>
-                            <li> <a href=" Javascript:void(0) "> <i class=" fa fa-envelope " aria-hidden=" true "></i> demo@gmail.com
-                               </a>
-                            </li>
-                         </ul>
-                         <di>
-                            <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
-                         </di>
-                      </div>
-                   </div>
-                   <div class=" col-md-3 col-sm-6 "">
+                  <div class=" Informa conta ">
+                     <h3>Contact Us</h3>
+                     <ul>
+                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> New York
+                           </a>
+                        </li>
+                       <!-- <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
+                           </a>
+                        </li> -->
+                        <li> <a href="mailto:blockstreamplatform@gmail709@gmail.com"> <i class=" fa fa-envelope " aria-hidden=" true "></i> Blockstreamplatform@gmail709@gmail.com
+                           </a>
+                        </li>
+                     </ul>
+                     <di>
+                        <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
+                     </di>
+                  </div>
+               </div>
+               <div class=" col-md-3 col-sm-6 "">
                         <div class="Informa helpful">
-                            <h3>Useful Link</h3>
+                            <h3>To Know</h3>
                             <div>
                                 <p>We prioritize industry-leading security measures and transparent practices to foster
                                     trust and confidence in the crypto
@@ -149,36 +137,35 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                      <div class=" Informa ">
-                         <h3>Offices</h3>
-                         <div>
-                            <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
-                         </div>
-                      </div>
-                   </div>
-                   <div class=" col-md-3 col-sm-6 ">
-                      <div class=" Informa ">
-                         <h3>Newsletter</h3>
-                         <form class=" newslatter_form ">
-                            <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your
-                        email ">
-                            <button class=" subs_btn ">Subscribe</button>
-                         </form>
-                      </div>
-                   </div>
-                </div>
-                <div class=" copyright text_align_center ">
-                   <div class=" container ">
-                      <div class=" row ">
-                         <div class=" col-md-12 ">
-                            <p>© 2020 All Rights Reserved. Design by   <a href=" https://html.design/ "> Free Html Template</a></p>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-          </div>
-          </footer>
+                  <div class=" Informa ">
+                     <h3>Dedication</h3>
+                     <div>
+                        <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class=" col-md-3 col-sm-6 ">
+                  <div class=" Informa ">
+                     <h3>Newsletter</h3>
+                     <form class=" newslatter_form ">
+                        <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your email ">
+                        <button class=" subs_btn ">Subscribe</button>
+                     </form>
+                  </div>
+               </div>
+            </div>
+            <div class=" copyright text_align_center ">
+               <div class=" container ">
+                  <div class=" row ">
+                     <div class=" col-md-12 ">
+                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+    </footer>
       <!-- end footer -->
       <!-- Javascript files-->
       <script src=" js/jquery.min.js "></script>
