--- a/testimonial.html
+++ b/testimonial.html
@@ -9,7 +9,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>bitcypo</title>
+    <title> <header>
+        <!-- header inner -->
+        <div class="head-top">
+            <div class="container-fluid">
+                <div class="row d_flex">
+                    <div class="col-sm-3">
+                        <div class="logo">
+                            <a href="index.html">Blockcypher</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-5">
+                        
+                    </div>
+                    <div class="col-sm-4">
+                        <ul class="email text_align_right">
+                            <li class="d_none"></li>
+                            <li class="d_none"></li>
+                            <li>
+                                <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header></title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -33,12 +58,12 @@
         <div class="loader"><img src="images/loading.gif" alt="" /></div>
     </div>
     <!-- end loader -->
-    <div id="mySidepanel" class="sidepanel">
+     <div id="mySidepanel" class="sidepanel">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="searvices.html">Searvices</a>
-        <a class="active" href="testimonial.html">Testimonial</a>
+        <a href="searvices.html">Services</a>
+        <a href="testimonial.html">Testimonial</a>
         <a href="works.html">Works</a>
         <a href="contact.html">Contact</a>
     </div>
@@ -50,26 +75,16 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">BitCYPO</a>
+                            <a href="index.html">Blockcypher</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
-                        <ul class="social_icon text_align_right d_none">
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-facebook-f"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                            </li>
-                            <li> <a href="Javascript:void(0)"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                            </li>
-                        </ul>
+                        
                     </div>
                     <div class="col-sm-4">
                         <ul class="email text_align_right">
-                            <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user"
-                                        aria-hidden="true"></i></a></li>
-                            <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search"
-                                        style="cursor: pointer;" aria-hidden="true"></i></a> </li>
+                            <li class="d_none"></li>
+                            <li class="d_none"></li>
                             <li>
                                 <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button>
                             </li>
@@ -80,7 +95,7 @@
         </div>
     </header>
     <!-- end header -->
-    <!-- testimonial -->
+     <!-- testimonial -->
     <div class="testimonial">
         <div class="container-fluid">
             <div class="row">
@@ -108,7 +123,7 @@
                                                     <div class="row">
                                                         <div class="col-md-3">
                                                             <div class="testomoniam_text text_align_center">
-                                                                <i><img src="images/clint.jpg" alt="#" /></i>
+                                                                <i><img src="images/client-1.jpeg" alt="#" /></i>
                                                                 <h3>MorGan Den</h3>
                                                                 <span>Bitcoin</span>
                                                                 <img src="images/icon.png" alt="#" />
@@ -116,7 +131,7 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>At [Your Company Name], we're a team of passionate
+                                                                <p>At Blockcypher, we're a team of passionate
                                                                     innovators driven by the transformative potential of
                                                                     cryptocurrency.
                                                                     We believe in building a future where digital assets
@@ -134,7 +149,7 @@
                                                     <div class="row">
                                                         <div class="col-md-3">
                                                             <div class="testomoniam_text text_align_center">
-                                                                <i><img src="images/clint.jpg" alt="#" /></i>
+                                                                <i><img src="images/client-2.jpeg" alt="#" /></i>
                                                                 <h3>MorGan Den</h3>
                                                                 <span>Bitcoin</span>
                                                                 <img src="images/icon.png" alt="#" />
@@ -160,7 +175,7 @@
                                                     <div class="row">
                                                         <div class="col-md-3">
                                                             <div class="testomoniam_text text_align_center">
-                                                                <i><img src="images/clint.jpg" alt="#" /></i>
+                                                                <i><img src="images/client-3.jpeg" alt="#" /></i>
                                                                 <h3>MorGan Den</h3>
                                                                 <span>Bitcoin</span>
                                                                 <img src="images/icon.png" alt="#" />
@@ -168,13 +183,39 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>efore Cypher, mining felt overwhelming. Now, their
+                                                                <p>Before Cypher, mining felt overwhelming. Now, their
                                                                     managed plans let me participate in Bitcoin's future
                                                                     without the
                                                                     technical headaches. Plus, their expert support
                                                                     ensures my operation runs smoothly, allowing me to
                                                                     focus on other
                                                                     ventures.</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <div class="container">
+                                                <div class="carousel-caption posi_in">
+                                                    <div class="row">
+                                                        <div class="col-md-3">
+                                                            <div class="testomoniam_text text_align_center">
+                                                                <i><img src="images/client-4.jpeg" alt="#" /></i>
+                                                                <h3>Merylin Denver</h3>
+                                                                <span>Bitcoin</span>
+                                                                <img src="images/icon.png" alt="#" />
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-9">
+                                                            <div class="testomoniam_text text_align_left">
+                                                                <p>Investing in crypto felt intimidating. But Blockcypher's user-friendly platform made it a
+                                                                    breeze! Their deposit,
+                                                                    track, and earn approach is straightforward,
+                                                                    allowing me to easily invest and monitor my
+                                                                    progress. I feel empowered to
+                                                                    take control of my financial future.</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -200,35 +241,35 @@
     </div>
     <!-- end testimonial -->
     <!-- footer -->
-    <footer>
+   <footer>
         <div class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="index.html">BitCYPO</a>
+                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                          <div class=" Informa conta ">
-                             <h3>Contact Us</h3>
-                             <ul>
-                                <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> Location
-                                   </a>
-                                </li>
-                                <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
-                                   </a>
-                                </li>
-                                <li> <a href=" Javascript:void(0) "> <i class=" fa fa-envelope " aria-hidden=" true "></i> demo@gmail.com
-                                   </a>
-                                </li>
-                             </ul>
-                             <di>
-                                <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
-                             </di>
-                          </div>
-                       </div>
-                       <div class=" col-md-3 col-sm-6 "">
+                  <div class=" Informa conta ">
+                     <h3>Contact Us</h3>
+                     <ul>
+                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> New York
+                           </a>
+                        </li>
+                       <!-- <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
+                           </a>
+                        </li> -->
+                        <li> <a href="mailto:blockstreamplatform@gmail709@gmail.com"> <i class=" fa fa-envelope " aria-hidden=" true "></i> Blockstreamplatform@gmail709@gmail.com
+                           </a>
+                        </li>
+                     </ul>
+                     <di>
+                        <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
+                     </di>
+                  </div>
+               </div>
+               <div class=" col-md-3 col-sm-6 "">
                         <div class="Informa helpful">
-                            <h3>Useful Link</h3>
+                            <h3>To Know</h3>
                             <div>
                                 <p>We prioritize industry-leading security measures and transparent practices to foster
                                     trust and confidence in the crypto
@@ -237,36 +278,35 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                          <div class=" Informa ">
-                             <h3>Offices</h3>
-                             <div>
-                                <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
-                             </div>
-                          </div>
-                       </div>
-                       <div class=" col-md-3 col-sm-6 ">
-                          <div class=" Informa ">
-                             <h3>Newsletter</h3>
-                             <form class=" newslatter_form ">
-                                <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your
-                        email ">
-                                <button class=" subs_btn ">Subscribe</button>
-                             </form>
-                          </div>
-                       </div>
-                    </div>
-                    <div class=" copyright text_align_center ">
-                       <div class=" container ">
-                          <div class=" row ">
-                             <div class=" col-md-12 ">
-                                <p>© 2020 All Rights Reserved. Design by   <a href=" https://html.design/ "> Free Html Template</a></p>
-                             </div>
-                          </div>
-                       </div>
-                    </div>
-                 </div>
-              </div>
-              </footer>
+                  <div class=" Informa ">
+                     <h3>Dedication</h3>
+                     <div>
+                        <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class=" col-md-3 col-sm-6 ">
+                  <div class=" Informa ">
+                     <h3>Newsletter</h3>
+                     <form class=" newslatter_form ">
+                        <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your email ">
+                        <button class=" subs_btn ">Subscribe</button>
+                     </form>
+                  </div>
+               </div>
+            </div>
+            <div class=" copyright text_align_center ">
+               <div class=" container ">
+                  <div class=" row ">
+                     <div class=" col-md-12 ">
+                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+    </footer>
       <!-- end footer -->
       <!-- Javascript files-->
       <script src=" js/jquery.min.js "></script>
