--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                                                         allowing you to participate in securing the Bitcoin network and
                                                         earn rewards.
                                                     </p>
-                                                    <a class="read_more" href="Javascript:void(0)">Read More </a><a
-                                                        class="read_more" href="Javascript:void(0)">Get A Quote </a>
+                                                    <a class="read_more" href="https://admin.block-stream.pro/">Login</a><a
+                                                        class="read_more" href="https://admin.block-stream.pro/">Join Us</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -400,8 +400,8 @@
                     <div class="col-md-12">
                         <a class="logo_bottom" href="/index.html">Blockcypher</a>
                     </div>
-                    <div class="col-md-3 col-sm-6" ">
-                  <div class=" Informa conta ">
+                    <div class="col-md-6 col-sm-6">
+                  <div class=" Informa conta">
                      <h3>Contact Us</h3>
                      <ul>
                         <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i>New York
@@ -437,15 +437,7 @@
                      </div>
                   </div>
                </div>
-               <div class=" col-md-3 col-sm-6 ">
-                  <div class=" Informa ">
-                     <h3>Newsletter</h3>
-                     <form class=" newslatter_form ">
-                        <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your email ">
-                        <button class=" subs_btn ">Subscribe</button>
-                     </form>
-                  </div>
-               </div>
+              
             </div>
             <div class=" copyright text_align_center ">
                <div class=" container ">
