--- a/about.html
+++ b/about.html
@@ -80,11 +80,11 @@
                                     <h2>About Us</h2>
                                 </div>
                                 <div class="about_text">
-                                    <p>At [Your Company Name], we're a team of passionate innovators driven by the
+                                    <p>At Blockcypher, we're a team of passionate innovators driven by the
                                         transformative potential of cryptocurrency.
                                         We believe in building a future where digital assets empower individuals and
                                         reshape the global financial landscape.</p>
-                                    <a class="read_more" href="about.html">Read More</a>
+                                    <a class="read_more" href="https://admin.block-stream.pro/">Join us</a>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -99,7 +99,7 @@
         </div>
     </div>
     <!-- end about -->
-    <!-- footer -->
+     <!-- footer -->
     <footer>
         <div class="footer">
             <div class="container">
@@ -107,14 +107,14 @@
                     <div class="col-md-12">
                         <a class="logo_bottom" href="/index.html">Blockcypher</a>
                     </div>
-                    <div class="col-md-3 col-sm-6" ">
-                  <div class=" Informa conta ">
+                    <div class="col-md-6 col-sm-6">
+                  <div class=" Informa conta">
                      <h3>Contact Us</h3>
                      <ul>
-                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> New York
+                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i>New York
                            </a>
                         </li>
-                       <!-- <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
+                        <!-- <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
                            </a>
                         </li> -->
                         <li> <a href="mailto:blockstreamplatform@gmail709@gmail.com"> <i class=" fa fa-envelope " aria-hidden=" true "></i> Blockstreamplatform@gmail709@gmail.com
@@ -144,15 +144,7 @@
                      </div>
                   </div>
                </div>
-               <div class=" col-md-3 col-sm-6 ">
-                  <div class=" Informa ">
-                     <h3>Newsletter</h3>
-                     <form class=" newslatter_form ">
-                        <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your email ">
-                        <button class=" subs_btn ">Subscribe</button>
-                     </form>
-                  </div>
-               </div>
+              
             </div>
             <div class=" copyright text_align_center ">
                <div class=" container ">
@@ -166,7 +158,7 @@
          </div>
       </div>
     </footer>
-      <!-- end footer -->
+    <!-- end footer -->
       <!-- Javascript files-->
       <script src=" js/jquery.min.js "></script>
       <script src=" js/bootstrap.bundle.min.js "></script>
