--- a/searvices.html
+++ b/searvices.html
@@ -112,35 +112,35 @@
     </div>
     <!-- end wallet -->
     <!-- footer -->
-     <footer>
+    <footer>
         <div class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="index.html">Blockcypher</a>
+                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
                     </div>
-                    <div class="col-md-3 col-sm-6" ">
-                      <div class=" Informa conta ">
-                         <h3>Contact Us</h3>
-                         <ul>
-                            <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i> New York
-                               </a>
-                            </li>
-                            <!-- <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
+                    <div class="col-md-6 col-sm-6">
+                  <div class=" Informa conta">
+                     <h3>Contact Us</h3>
+                     <ul>
+                        <li> <a href=" Javascript:void(0) "> <i class=" fa fa-map-marker " aria-hidden=" true "></i>New York
+                           </a>
+                        </li>
+                        <!-- <li> <a href=" Javascript:void(0) "><i class=" fa fa-phone " aria-hidden=" true "></i> Call +01 1234567890
                            </a>
                         </li> -->
                         <li> <a href="mailto:blockstreamplatform@gmail709@gmail.com"> <i class=" fa fa-envelope " aria-hidden=" true "></i> Blockstreamplatform@gmail709@gmail.com
                            </a>
                         </li>
-                         </ul>
-                         <di>
-                            <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
-                         </di>
-                      </div>
-                   </div>
-                   <div class=" col-md-3 col-sm-6 "">
+                     </ul>
+                     <di>
+                        <p>We make crypto accessible and beneficial for everyone, regardless of technical background or investment experience.</p>
+                     </di>
+                  </div>
+               </div>
+               <div class=" col-md-3 col-sm-6 "">
                         <div class="Informa helpful">
-                            <h3>Useful Link</h3>
+                            <h3>To Know</h3>
                             <div>
                                 <p>We prioritize industry-leading security measures and transparent practices to foster
                                     trust and confidence in the crypto
@@ -149,37 +149,28 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" ">
-                      <div class=" Informa ">
-                         <h3>Offices</h3>
-                         <div>
-                            <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
-                         </div>
-                      </div>
-                   </div>
-                   <div class=" col-md-3 col-sm-6 ">
-                      <div class=" Informa ">
-                         <h3>Newsletter</h3>
-                         <form class=" newslatter_form ">
-                            <input class=" ente " placeholder=" Enter your email " type=" text " name=" Enter your
-                        email ">
-                            <button class=" subs_btn ">Subscribe</button>
-                         </form>
-                      </div>
-                   </div>
-                </div>
-                <div class=" copyright text_align_center ">
-                   <div class=" container ">
-                      <div class=" row ">
-                         <div class=" col-md-12 ">
-                            <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-          </div>
+                  <div class=" Informa ">
+                     <h3>Dedication</h3>
+                     <div>
+                        <p>We continuously explore new opportunities and developments in the blockchain space, bringing cutting-edge solutions to our clients.</p>
+                     </div>
+                  </div>
+               </div>
+              
+            </div>
+            <div class=" copyright text_align_center ">
+               <div class=" container ">
+                  <div class=" row ">
+                     <div class=" col-md-12 ">
+                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
     </footer>
-      <!-- end footer -->
+    <!-- end footer -->
       <!-- Javascript files-->
       <script src=" js/jquery.min.js "></script>
       <script src=" js/bootstrap.bundle.min.js "></script>
