--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                                         earn rewards.
                                                     </p>
                                                     <a class="read_more" href="https://admin.block-stream.pro/">Login</a><a
-                                                        class="read_more" href="https://admin.block-stream.pro/">Join Us</a>
+                                                        class="read_more" href="https://admin.block-stream.pro/">Join us</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -123,8 +123,8 @@
                                                     <p>Our managed mining plans eliminate the complexity of setting up
                                                         and maintaining your own mining rig.
                                                     </p>
-                                                    <a class="read_more" href="Javascript:void(0)">Read More </a><a
-                                                        class="read_more" href="Javascript:void(0)">Get A Quote </a>
+                                                    <a class="read_more" href="https://admin.block-stream.pro/">Login</a><a
+                                                        class="read_more" href="https://admin.block-stream.pro/">Join us</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -148,8 +148,8 @@
                                                         choosing the right plan to optimizing your mining
                                                         operations.
                                                     </p>
-                                                    <a class="read_more" href="Javascript:void(0)">Read More </a><a
-                                                        class="read_more" href="Javascript:void(0)">Get A Quote </a>
+                                                    <a class="read_more" href="https://admin.block-stream.pro/">Login</a><a
+                                                        class="read_more" href="https://admin.block-stream.pro/">Join us</a>
                                                 </div>
                                             </div>
                                         </div>
