added block stream

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Blockcypher</title>
+    <title>Blockstream</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -50,7 +50,7 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">Blockcypher</a>
+                            <a href="index.html">Blockstream</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -223,7 +223,7 @@
                                     <h2>About Us</h2>
                                 </div>
                                 <div class="about_text">
-                                    <p>At Blockcypher, we're a team of passionate innovators driven by the
+                                    <p>At Blockstream, we're a team of passionate innovators driven by the
                                         transformative potential of cryptocurrency.
                                         We believe in building a future where digital assets empower individuals and
                                         reshape the global financial landscape.</p>
@@ -279,7 +279,7 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>At Blockcypher, we're a team of passionate
+                                                                <p>At Blockstream, we're a team of passionate
                                                                     innovators driven by the transformative potential of
                                                                     cryptocurrency.
                                                                     We believe in building a future where digital assets
@@ -358,7 +358,7 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>Investing in crypto felt intimidating. But Blockcypher's user-friendly platform made it a
+                                                                <p>Investing in crypto felt intimidating. But Blockstream's user-friendly platform made it a
                                                                     breeze! Their deposit,
                                                                     track, and earn approach is straightforward,
                                                                     allowing me to easily invest and monitor my
@@ -398,7 +398,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
+                        <a class="logo_bottom" href="/index.html">Blockstream</a>
                     </div>
                     <div class="col-md-6 col-sm-6">
                   <div class=" Informa conta">
@@ -443,7 +443,7 @@
                <div class=" container ">
                   <div class=" row ">
                      <div class=" col-md-12 ">
-                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                        <p>&copy;2022 <a href="/index.html">Blockstream</a></p>
                      </div>
                   </div>
                </div>
