--- a/searvices.html
+++ b/searvices.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Blockcypher</title>
+    <title>Blockstream</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -50,7 +50,7 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">Blockcypher</a>
+                            <a href="index.html">Blockstream</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
+                        <a class="logo_bottom" href="/index.html">Blockstream</a>
                     </div>
                     <div class="col-md-6 col-sm-6">
                   <div class=" Informa conta">
@@ -162,7 +162,7 @@
                <div class=" container ">
                   <div class=" row ">
                      <div class=" col-md-12 ">
-                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                        <p>&copy;2022 <a href="/index.html">Blockstream</a></p>
                      </div>
                   </div>
                </div>
