--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">Blockcypher</a>
+                            <a href="index.html">Blockstream</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -80,7 +80,7 @@
                                     <h2>About Us</h2>
                                 </div>
                                 <div class="about_text">
-                                    <p>At Blockcypher, we're a team of passionate innovators driven by the
+                                    <p>At Blockstream, we're a team of passionate innovators driven by the
                                         transformative potential of cryptocurrency.
                                         We believe in building a future where digital assets empower individuals and
                                         reshape the global financial landscape.</p>
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
+                        <a class="logo_bottom" href="/index.html">Blockstream</a>
                     </div>
                     <div class="col-md-6 col-sm-6">
                   <div class=" Informa conta">
@@ -150,7 +150,7 @@
                <div class=" container ">
                   <div class=" row ">
                      <div class=" col-md-12 ">
-                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                        <p>&copy;2022 <a href="/index.html">Blockstream</a></p>
                      </div>
                   </div>
                </div>
