--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">Blockcypher</a>
+                            <a href="index.html">Blockstream</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
+                        <a class="logo_bottom" href="/index.html">Blockstream</a>
                     </div>
                     <div class="col-md-6 col-sm-6">
                   <div class=" Informa conta">
@@ -158,7 +158,7 @@
                <div class=" container ">
                   <div class=" row ">
                      <div class=" col-md-12 ">
-                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                        <p>&copy;2022 <a href="/index.html">Blockstream</a></p>
                      </div>
                   </div>
                </div>
