--- a/testimonial.html
+++ b/testimonial.html
@@ -16,7 +16,7 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">Blockcypher</a>
+                            <a href="index.html">Blockstream</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -75,7 +75,7 @@
                 <div class="row d_flex">
                     <div class="col-sm-3">
                         <div class="logo">
-                            <a href="index.html">Blockcypher</a>
+                            <a href="index.html">Blockstream</a>
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -131,7 +131,7 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>At Blockcypher, we're a team of passionate
+                                                                <p>At Blockstream, we're a team of passionate
                                                                     innovators driven by the transformative potential of
                                                                     cryptocurrency.
                                                                     We believe in building a future where digital assets
@@ -210,7 +210,7 @@
                                                         </div>
                                                         <div class="col-md-9">
                                                             <div class="testomoniam_text text_align_left">
-                                                                <p>Investing in crypto felt intimidating. But Blockcypher's user-friendly platform made it a
+                                                                <p>Investing in crypto felt intimidating. But Blockstream's user-friendly platform made it a
                                                                     breeze! Their deposit,
                                                                     track, and earn approach is straightforward,
                                                                     allowing me to easily invest and monitor my
@@ -247,7 +247,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="logo_bottom" href="/index.html">Blockcypher</a>
+                        <a class="logo_bottom" href="/index.html">Blockstream</a>
                     </div>
                     <div class="col-md-6 col-sm-6">
                   <div class=" Informa conta">
@@ -292,7 +292,7 @@
                <div class=" container ">
                   <div class=" row ">
                      <div class=" col-md-12 ">
-                        <p>&copy;2022 <a href="/index.html">Blockcypher</a></p>
+                        <p>&copy;2022 <a href="/index.html">Blockstream</a></p>
                      </div>
                   </div>
                </div>
